add_library(iss)
add_executable(main)

set(LIB_SRCS
    iss.c
    core.c
    main_mem.c
    rom.c
    halt.c
    text_buffer.c
    mem_map.c
    load_elf.c
    tick.c
    abstract_mem.c
)
target_sources(iss PRIVATE ${LIB_SRCS})
target_sources(main PRIVATE main.c)

target_link_libraries(main PRIVATE iss)

# 🔧 FIX: include path for iss headers
target_include_directories(iss
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/../include
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
)
target_include_directories(main
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/../include
)

target_compile_options(iss
    PRIVATE
        -Wall -Werror
)
target_compile_options(main
    PRIVATE
        -Wall -Werror
)
